# SPDX-FileCopyrightText: Copyright (c) The helly25 authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

package(
    default_visibility = ["//visibility:private"],
    features = [
        "layering_check",
        "parse_headers",
    ],
)

cc_library(
    name = "diff_options_cc",
    srcs = ["diff_options.cc"],
    hdrs = ["diff_options.h"],
    visibility = ["//mbo/diff:__subpackages__"],
    deps = [
        "//mbo/file:artefact_cc",
        "//mbo/strings:strip_cc",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@re2//:re2",
        "@com_helly25_mbo//mbo/container:limited_map_cc",
        "@com_helly25_mbo//mbo/types:no_destruct_cc",
    ],
)

cc_library(
    name = "base_diff_cc",
    srcs = ["base_diff.cc"],
    hdrs = ["base_diff.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":diff_options_cc",
        "//mbo/diff/internal:data_cc",
        "//mbo/file:artefact_cc",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
        "@re2//:re2",
    ],
)

cc_library(
    name = "chunked_diff_cc",
    srcs = ["chunked_diff.cc"],
    hdrs = ["chunked_diff.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":base_diff_cc",
        ":diff_options_cc",
        "//mbo/diff/internal:chunk_cc",
        "//mbo/file:artefact_cc",
        "@abseil-cpp//absl/cleanup",
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_library(
    name = "diff_cc",
    srcs = ["diff.cc"],
    hdrs = ["diff.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":diff_options_cc",
        "//mbo/diff/impl:diff_direct_cc",
        "//mbo/diff/impl:diff_unified_cc",
        "//mbo/file:artefact_cc",
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_binary(
    name = "diff",
    srcs = ["diff_main.cc"],
    visibility = ["//visibility:public"],
    deps = [
        ":diff_cc",
        "//mbo/diff/internal:update_absl_log_flags_cc",
        "//mbo/file:artefact_cc",
        "//mbo/strings:indent_cc",
        "//mbo/strings:strip_cc",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/flags:usage",
        "@abseil-cpp//absl/log:absl_log",
        "@abseil-cpp//absl/log:initialize",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@re2//:re2",
    ],
)

cc_test(
    name = "diff_test",
    size = "small",
    srcs = ["diff_test.cc"],
    deps = [
        ":diff_cc",
        "//mbo/container:convert_container_cc",
        "//mbo/file:artefact_cc",
        "//mbo/strings:indent_cc",
        "//mbo/testing:status_cc",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "@com_helly25_mbo//mbo/status:status_macros_cc",
    ],
)

bzl_library(
    name = "diff_bzl",
    srcs = ["diff.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_skylib//lib:shell",
    ],
)
