# SPDX-FileCopyrightText: Copyright (c) The helly25 authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:private"])

cc_library(
    name = "digest_cc",
    srcs = [
        "digest_blake2b.h",
        "digest_blake3.h",
        "digest_concepts.h",
        "digest_hmac.h",
        "digest_md5.h",
        "digest_sha1.h",
        "digest_sha256.h",
        "digest_sha3.h",
        "digest_sha512.h",
        "digest_shake.h",
    ],
    hdrs = ["digest.h"],
    visibility = ["//visibility:public"],
    deps = ["//mbo/hash:hash_internal_util"],
)

cc_test(
    name = "digest_test",
    srcs = ["digest_test.cc"],
    deps = [
        ":digest_cc",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
