# SPDX-FileCopyrightText: Copyright (c) The helly25 authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@helly25_bashtest//bashtest:bashtest.bzl", "bashtest")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
load(":digest.bzl", "verify_digest_test")

package(default_visibility = ["//visibility:private"])

bzl_library(
    name = "digest_bzl",
    srcs = ["digest.bzl"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "digest_cc",
    srcs = [
        "digest_blake2b.h",
        "digest_blake3.h",
        "digest_concepts.h",
        "digest_hmac.h",
        "digest_md5.h",
        "digest_sha1.h",
        "digest_sha256.h",
        "digest_sha3.h",
        "digest_sha512.h",
        "digest_shake.h",
    ],
    hdrs = ["digest.h"],
    visibility = ["//visibility:public"],
    deps = ["//mbo/hash:hash_internal_util"],
)

cc_test(
    name = "digest_test",
    srcs = ["digest_test.cc"],
    deps = [
        ":digest_cc",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "digest",
    srcs = ["digest_main.cc"],
    visibility = ["//visibility:public"],
    deps = [
        ":digest_cc",
        "//mbo/strings:indent_cc",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/flags:usage",
        "@abseil-cpp//absl/log:initialize",
    ],
)

bashtest(
    name = "digest_cli_sh_test",
    srcs = ["digest_cli_sh_test.sh"],
    data = [":digest"] + glob(["testdata/digest_cli_sh_test/**"]),
)

# Self-test for the verify_digest_test rule: the same stable fixture pinned both
# via a committed sidecar (`digests`) and via an inline hex (`checksums`), so
# both code paths are exercised.
verify_digest_test(
    name = "verify_digest_selftest",
    checksums = {
        "testdata/verify_digest_test/fixture.txt": "372970a9b33c2b28dbf0342123cc923e5a70af2d67dcab29be03d5d0a2c9abda",
    },
    digests = {
        "testdata/verify_digest_test/fixture.txt": "testdata/verify_digest_test/fixture.txt.sha256",
    },
)
