# Copyright M. Boerger (helly25.com)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:private"])

cc_library(
    name = "artefact_cc",
    srcs = ["artefact.cc"],
    hdrs = ["artefact.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":file_cc",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/time",
    ],
)

cc_library(
    name = "file_cc",
    srcs = ["file.cc"],
    hdrs = ["file.h"],
    deps = [
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "file_test",
    srcs = ["file_test.cc"],
    deps = [
        "file_cc",
        "//mbo/testing:status_cc",
        "@com_google_googletest//:gtest_main",
    ],
    size = "small",
)
