# SPDX-FileCopyrightText: Copyright (c) The helly25 authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:common_settings.bzl", "int_flag", "string_flag")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
load("//mbo/diff:diff.bzl", "diff_test")
load("//mbo/digest:digest.bzl", "verify_digest_test")
load(":internal/hash_mangle_seed.bzl", "mangle_seed_gen")

package(default_visibility = ["//visibility:private"])

# Create custom bazel flag `--//mbo/hash:mangle_seed`: any printable-ASCII
# string (user name, release tag, date, ...) selecting the mangle constant.
# Folded to a bucket inside `mangle_seed_gen`, so caches converge (see
# `hash_mangle.h`).
string_flag(
    name = "mangle_seed",
    build_setting_default = "",
    visibility = ["//visibility:private"],
)

# Create custom bazel flag `--//mbo/hash:mangle_seed_buckets`: 0 disables the
# mangle (`GetHash == GetHash64`), 1 pins one stable nonzero constant, N
# bounds the per-seed variation to N constants.
int_flag(
    name = "mangle_seed_buckets",
    build_setting_default = 8,
    visibility = ["//visibility:private"],
)

bzl_library(
    name = "hash_mangle_seed_bzl",
    srcs = ["internal/hash_mangle_seed.bzl"],
    visibility = ["//visibility:private"],
    deps = ["@bazel_skylib//rules:common_settings"],
)

mangle_seed_gen(
    name = "hash_mangle_seed_gen",
    output = "hash_mangle_seed_gen.h",
    visibility = ["//visibility:private"],
)

# Pins the non-Bazel fallback: under default flags the generated header must
# be byte-identical to the checked-in template. Fails when defaults or the
# fold change without updating `internal/hash_mangle_seed.h.in`.
diff_test(
    name = "hash_mangle_seed_default_test",
    file_new = "hash_mangle_seed_gen.h",
    file_old = "internal/hash_mangle_seed.h.in",
)

cc_library(
    name = "hash_internal_util",
    hdrs = [
        "hash_internal_util.h",
        "hash_types.h",
    ],
    # Shared load/mix primitives. mbo/digest builds on these (the big-endian
    # loads used by digest specifications live here too, so the dual-path
    # byte-load logic exists exactly once).
    visibility = ["//mbo/digest:__pkg__"],
)

cc_library(
    name = "hash_cc",
    srcs = [
        "hash_dumbo.h",
        "hash_fnv1a.h",
        "hash_mumbo.h",
        "hash_murmur3.h",
        "hash_siphash.h",
    ],
    hdrs = ["hash.h"],
    visibility = ["//visibility:public"],
    deps = [":hash_internal_util"],
)

cc_library(
    name = "hash_mangle_cc",
    srcs = ["hash_mangle_seed_gen.h"],
    hdrs = ["hash_mangle.h"],
    # The build-seed mangle (`GetHash`, `MangledHasher`): kept out of
    # `hash_cc` so plain hash users are never exposed to (and never rebuilt
    # for) the `--//mbo/hash:mangle_seed*` flag settings.
    visibility = ["//visibility:public"],
    deps = [":hash_cc"],
)

cc_library(
    name = "hash_extra_cc",
    srcs = [
        "hash_rapidhash.h",
        "hash_xxh3.h",
        "hash_xxh64.h",
    ],
    hdrs = ["hash_extra.h"],
    # NOTICE-bearing transcriptions (rapidhash MIT, xxHash BSD-2): kept out of
    # the default hash_cc so distributions that do not link this target carry
    # no third-party notice obligations (see NOTICE and README.md).
    visibility = ["//visibility:public"],
    deps = [
        ":hash_cc",
        ":hash_internal_util",
    ],
)

cc_library(
    name = "hash_test_util",
    testonly = True,
    hdrs = ["hash_test_util.h"],
    deps = [
        ":hash_cc",
        ":hash_extra_cc",
    ],
)

cc_test(
    name = "hash_test",
    srcs = [
        "hash_test.cc",
        "hash_test_vectors.inc",  # generated by :hash_test_vectors_gen, #included by hash_test.cc
    ],
    deps = [
        ":hash_cc",
        ":hash_test_util",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "hash_mangle_test",
    srcs = ["hash_mangle_test.cc"],
    # Verifies the configuration it is built under in both directions:
    # enabled => `GetHash` differs from `GetHash64`, disabled => identical
    # (CI additionally runs it with `--//mbo/hash:mangle_seed_buckets=0`,
    # see .github/workflows/test.yml).
    deps = [
        ":hash_cc",
        ":hash_mangle_cc",
        ":hash_test_util",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "hash_differential_test",
    srcs = ["hash_differential_test.cc"],
    # `manual`: depends on @xxhash_reference, which only exists when the dev
    # module is loaded (bazelmod/dev.MODULE.bazel) - i.e. when helly25_mbo is
    # the root module. Wildcards used by consumers must not analyze it; CI runs
    # it explicitly (see .github/workflows/test.yml).
    tags = ["manual"],
    deps = [
        ":hash_cc",
        ":hash_test_util",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "@xxhash_reference//:xxhash",
    ],
)

cc_binary(
    name = "hash_benchmark",
    testonly = True,
    srcs = ["hash_benchmark.cc"],
    tags = ["manual"],
    deps = [
        ":hash_test_util",
        "@com_github_google_benchmark//:benchmark",
    ],
)

# Regenerates the committed known-answer vectors:
#   bazel run //mbo/hash:hash_test_vectors_gen > mbo/hash/hash_test_vectors.inc
# Run intentionally when an in-house algorithm changes (see hash_test_vectors.inc).
cc_binary(
    name = "hash_test_vectors_gen",
    testonly = True,
    srcs = ["hash_test_vectors_gen.cc"],
    tags = ["manual"],
    deps = [
        ":hash_cc",
        "//mbo/strings:indent_cc",
    ],
)

# Freshly regenerates the vectors in-tree (never committed); the diff_test below
# compares it against the committed hash_test_vectors.inc.
genrule(
    name = "hash_test_vectors_generated",
    testonly = True,
    outs = ["hash_test_vectors.generated.inc"],
    cmd = "$(execpath :hash_test_vectors_gen) > $@",
    tools = [":hash_test_vectors_gen"],
)

# Fails if the committed hash_test_vectors.inc is stale: an in-house algorithm
# (or the generator) changed but `hash_test_vectors_gen` was not re-run. This is
# what forces a deliberate regeneration (and sidecar refresh) on any hash change.
diff_test(
    name = "hash_test_vectors_up_to_date_test",
    file_new = "hash_test_vectors.generated.inc",
    file_old = "hash_test_vectors.inc",
)

# Independent integrity: the committed hash_test_vectors.inc.sha256 sidecar is
# verifiable with stock `sha256sum -c` (an external party can save/fetch it) and
# here via `//mbo/digest:digest --check`. Fails if the .inc changed without the
# sidecar being regenerated in the same commit.
verify_digest_test(
    name = "hash_test_vectors_digest_test",
    digests = {"hash_test_vectors.inc": "hash_test_vectors.inc.sha256"},
)
