# SPDX-FileCopyrightText: Copyright (c) The helly25/mbo authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load("mope.bzl", "mope_test")

package(default_visibility = ["//visibility:private"])

# The custom bazel flag allows to control the `clang-format` tool to use.
# If it is set to `clang-format-auto`, then the rule tries to find the tool.
# If the value is an empty string, then the rule is configured in `mope.bzl`.
# Otherwise the value should be the absolute file location of `clang-format`.
string_flag(
    name = "clang_format",
    build_setting_default = "clang-format-auto",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "ini_cc",
    srcs = ["ini.cc"],
    hdrs = ["ini.h"],
    deps = [
        ":mope_cc",
        "//mbo/file/ini:ini_file_cc",
        "//mbo/status:status_macros_cc",
        "@com_google_absl//absl/container:btree",
        "@com_google_absl//absl/strings",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "mope_cc",
    srcs = ["mope.cc"],
    hdrs = ["mope.h"],
    deps = [
        "//mbo/container:any_scan_cc",
        "//mbo/types:extend_cc",
        "//mbo/status:status_macros_cc",
        "//mbo/strings:parse_cc",
        "@com_google_absl//absl/cleanup",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:node_hash_map",
        "@com_google_absl//absl/log:absl_check",
        "@com_google_absl//absl/log:absl_log",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_googlesource_code_re2//:re2",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "mope",
    srcs = ["mope_main.cc"],
    visibility = ["//visibility:public"],
    deps = [
        ":ini_cc",
        ":mope_cc",
        "//mbo/file:artefact_cc",
        "//mbo/file/ini:ini_file_cc",
        "//mbo/status:status_macros_cc",
        "@com_google_absl//absl/container:btree",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/log:initialize",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

mope_test(
    name = "mope_test",
    srcs = glob(["tests/*.mope"]),
    outs = glob(["tests/*.golden"]),
    data = glob(["tests/*.ini"]),
)

bzl_library(
    name = "mope_bzl",
    srcs = ["mope.bzl"],
    deps = ["//mbo/diff:diff_bzl"],
    visibility = ["//visibility:public"],
)
