# SPDX-FileCopyrightText: Copyright (c) The helly25/mbo authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:private"])

cc_library(
    name = "indent_cc",
    srcs = ["indent.cc"],
    hdrs = ["indent.h"],
    deps = [
        "@com_google_absl//absl/strings",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "indent_test",
    srcs = ["indent_test.cc"],
    deps = [
        "indent_cc",
        "@com_google_googletest//:gtest_main",
    ],
    size = "small",
)

cc_library(
    name = "parse_cc",
    srcs = ["parse.cc"],
    hdrs = ["parse.h"],
    deps = [
        "//mbo/status:status_macros_cc",
        "@com_google_absl//absl/log:absl_check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "parse_test",
    srcs = ["parse_test.cc"],
    deps = [
        ":parse_cc",
        "//mbo/status:status_macros_cc",
        "//mbo/testing:status_cc",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_main",
    ],
    size = "small",
)

cc_library(
    name = "strip_cc",
    srcs = ["strip.cc"],
    hdrs = ["strip.h"],
    deps =[
        ":parse_cc",
        "//mbo/status:status_macros_cc",
        "//mbo/testing:status_cc",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "strip_test",
    srcs = ["strip_test.cc"],
    deps = [
        ":strip_cc",
        "//mbo/status:status_macros_cc",
        "//mbo/testing:status_cc",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_main",
    ],
)
