# SPDX-FileCopyrightText: Copyright (c) The helly25 authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:private"])

cc_library(
    name = "indent_cc",
    srcs = ["indent.cc"],
    hdrs = ["indent.h"],
    implementation_deps = [
        "@abseil-cpp//absl/strings",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "indent_test",
    size = "small",
    srcs = ["indent_test.cc"],
    deps = [
        "indent_cc",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "numbers_cc",
    hdrs = ["numbers.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//mbo/container:limited_map_cc",
    ],
)

cc_test(
    name = "numbers_test",
    srcs = ["numbers_test.cc"],
    deps = [
        ":numbers_cc",
        "@abseil-cpp//absl/strings:str_format",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "parse_cc",
    srcs = ["parse.cc"],
    hdrs = ["parse.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//mbo/status:status_macros_cc",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_test(
    name = "parse_test",
    size = "small",
    srcs = ["parse_test.cc"],
    deps = [
        ":parse_cc",
        "//mbo/status:status_macros_cc",
        "//mbo/testing:status_cc",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "split_cc",
    hdrs = ["split.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "split_test",
    srcs = ["split_test.cc"],
    deps = [
        ":split_cc",
        "//mbo/types:traits_cc",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "strip_cc",
    srcs = ["strip.cc"],
    hdrs = ["strip.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":parse_cc",
        "//mbo/status:status_macros_cc",
        "//mbo/testing:status_cc",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
    ],
)

cc_test(
    name = "strip_test",
    srcs = ["strip_test.cc"],
    deps = [
        ":strip_cc",
        "//mbo/status:status_macros_cc",
        "//mbo/testing:status_cc",
        "@abseil-cpp//absl/status:statusor",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
